# chat-bot-demo

./: .env.example  README.md  clear_session.py  ingest.py  main.py  pyproject.toml  test_graph.py
.data/: checkpoints.sqlite3  checkpoints.sqlite3-shm  checkpoints.sqlite3-wal
.data/chroma_db/: chroma.sqlite3
app/adapters/providers/: openai_client.py
app/api/: routes.py
app/core/: config.py
app/llm/: graph.py  prompts.py
app/models/: schemas.py
app/services/: chat.py  rag_service.py
knowledge_base/: story.txt
