[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Production-style chatbot backend with FastAPI + LangGraph (OpenAI, checkpointing)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Vuong Gia Hy" }]

dependencies = [
  # Web/API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  # LangGraph + core primitives
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  # OpenAI integration via LangChain partner package + OpenAI client
  "langchain-openai>=1.0.0",
  "openai>=1.40.0",
  # Persistence / checkpointing backend (SQLite by default)
  "langgraph-checkpoint-sqlite>=1.0.0",
  # Observability & robustness
  "structlog>=24.1.0",
  "loguru>=0.7.0",
  "tenacity>=8.3.0",
  # Env
  "python-dotenv>=1.0.1",
  # Vector store
  "langchain-community>=0.2.0",  # For loaders/splitters
  "langchain-chroma>=0.1.0",      # The Chroma vector store integration
  "tiktoken>=0.7.0",              # Tokenizer for embeddings
]

[project.optional-dependencies]
# If you later want Postgres-backed persistence, install this extra:
postgres = [
  "langgraph-checkpoint-postgres>=1.0.0",
  "psycopg[binary]>=3.1.0"
]
redis-memory = ["redis>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
fix = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]